--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,10 +14,10 @@
 		"verbatimModuleSyntax": true,
 
 		/* Emit */
-		"outDir": "./dist",
+		"outDir": "./lib",
 		"sourceMap": true,
 		"declaration": true,
-		"declarationDir": "./dist/types",
+		"declarationDir": "./lib/types",
 		"declarationMap": true,
 
 		/* Type Checking */
