Switch to NodeNext module resolution to avoid problems in consumers of the package
Using imports without a file extension works when building this project with module resolution ESNext, but causes problems when the package is included in Svelte projects where it fails.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,11 @@
 	/* https://aka.ms/tsconfig */
 	"compilerOptions": {
 		/* Modules */
-		"module": "esnext",
-		"moduleResolution": "bundler",
+		"module": "NodeNext",
+		"moduleResolution": "NodeNext",
 
 		/* Language and Environment */
-		"target": "esnext",
+		"target": "ESNext",
 
 		/* Interop Constraints */
 		"forceConsistentCasingInFileNames": true,
